// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should work 1`] = `
.emotion-0 {
  color: red;
}

.emotion-0:hover {
  color: green;
}

<p
  className="emotion-0"
>
  wow
</p>
`;

exports[`should work with functions 1`] = `
.emotion-0 {
  color: red;
}

.emotion-0:hover {
  color: brickred;
}

<p
  className="emotion-0"
>
  wow
</p>
`;
